Stop keeping track of the remaining time

It's not used in the UI

BUG: 381979